# c-ls

./: .gitignore  CMakeLists.txt  README.md
include/: ls.h  ls_os.h  ls_stat.h  ls_status.h
src/core/: ls.c
src/ls/: ls.c  ls_stat.c  ls_status.c
src/os/: ls_os.c  ls_posix.c  posix.c
